; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-stagesurf.c_gs_stagesurface_unmap.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-stagesurf.c_gs_stagesurface_unmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GL_PIXEL_PACK_BUFFER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"glUnmapBuffer\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_stagesurface_unmap(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load i32, i32* @GL_PIXEL_PACK_BUFFER, align 4
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @gl_bind_buffer(i32 %3, i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @GL_PIXEL_PACK_BUFFER, align 4
  %12 = call i32 @glUnmapBuffer(i32 %11)
  %13 = call i32 @gl_success(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %14 = load i32, i32* @GL_PIXEL_PACK_BUFFER, align 4
  %15 = call i32 @gl_bind_buffer(i32 %14, i32 0)
  br label %16

16:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @gl_bind_buffer(i32, i32) #1

declare dso_local i32 @glUnmapBuffer(i32) #1

declare dso_local i32 @gl_success(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
